Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntObjRetText.quorum
class Main
    action Main
        Yoda<Text, Text, Integer> yoda
        Integer y = yoda:useForce("green", "green")
        output "passed"
     end
end
