Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntObjRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, Integer> yoda
        boolean y = yoda("green", "green", true)
     end
end
